@@ -1,22 +1,0 @@
-####################################################################
-# $Id$
-# by Andrew C. Uselton <uselton2@llnl.gov> 
-# Copyright (C) 2001 Regents of the University of California
-# See ./DISCLAIMER
-####################################################################
-# Config file for the new PowerMan daemon
-include "/etc/powerman/baytech.spec"
-begin global
-	client listener port 10101
-end global
-device "Baytech" "baytech" "baytech" "23"
-begin nodes
-	node "tux0" "Baytech" "1"
-	node "tux1" "Baytech" "2"
-	node "tux2" "Baytech" "3"
-	node "tux3" "Baytech" "4"
-	node "tux4" "Baytech" "5"
-	node "tux5" "Baytech" "6"
-	node "tux6" "Baytech" "7"
-	node "tux7" "Baytech" "8"
-end nodes
