@@ -1,24 +1,0 @@
-####################################################################
-# $Id$
-# by Andrew C. Uselton <uselton2@llnl.gov> 
-# Copyright (C) 2001 Regents of the University of California
-# See ./DISCLAIMER
-####################################################################
-# Config file for the new PowerMan daemon
-include "/etc/powerman/icebox.dev"
-begin global
-	client listener port 10101
-end global
-device "Icebox" "icebox" "ice-test" "1010"
-begin nodes
-	node "tux0" "Icebox" "1"
-	node "tux1" "Icebox" "2"
-	node "tux2" "Icebox" "3"
-	node "tux3" "Icebox" "4"
-	node "tux4" "Icebox" "5"
-	node "tux5" "Icebox" "6"
-	node "tux6" "Icebox" "7"
-	node "tux7" "Icebox" "8"
-	node "tux8" "Icebox" "9"
-	node "tux9" "Icebox" "10"
-end nodes
