@@ -1,0 +1,81 @@
+include "/etc/powerman/vpc.dev"
+
+begin global
+	client listener port 10101
+end global
+
+device "vpc0" "vpc" "localhost" "8080"
+device "vpc1" "vpc" "localhost" "8081"
+device "vpc2" "vpc" "localhost" "8082"
+device "vpc3" "vpc" "localhost" "8083"
+device "vpc4" "vpc" "localhost" "8084"
+device "vpc5" "vpc" "localhost" "8085"
+device "vpc6" "vpc" "localhost" "8086"
+device "vpc7" "vpc" "localhost" "8087"
+
+begin nodes
+	node "v0" "vpc0" "0"
+	node "v1" "vpc0" "1"
+	node "v2" "vpc0" "2"
+	node "v3" "vpc0" "3"
+	node "v4" "vpc0" "4"
+	node "v5" "vpc0" "5"
+	node "v6" "vpc0" "6"
+	node "v7" "vpc0" "7"
+	node "v8" "vpc1" "0"
+	node "v9" "vpc1" "1"
+	node "v10" "vpc1" "2"
+	node "v11" "vpc1" "3"
+	node "v12" "vpc1" "4"
+	node "v13" "vpc1" "5"
+	node "v14" "vpc1" "6"
+	node "v15" "vpc1" "7"
+	node "v16" "vpc2" "0"
+	node "v17" "vpc2" "1"
+	node "v18" "vpc2" "2"
+	node "v19" "vpc2" "3"
+	node "v20" "vpc2" "4"
+	node "v21" "vpc2" "5"
+	node "v22" "vpc2" "6"
+	node "v23" "vpc2" "7"
+	node "v24" "vpc3" "0"
+	node "v25" "vpc3" "1"
+	node "v26" "vpc3" "2"
+	node "v27" "vpc3" "3"
+	node "v28" "vpc3" "4"
+	node "v29" "vpc3" "5"
+	node "v30" "vpc3" "6"
+	node "v31" "vpc3" "7"
+	node "v32" "vpc4" "0"
+	node "v33" "vpc4" "1"
+	node "v34" "vpc4" "2"
+	node "v35" "vpc4" "3"
+	node "v36" "vpc4" "4"
+	node "v37" "vpc4" "5"
+	node "v38" "vpc4" "6"
+	node "v39" "vpc4" "7"
+	node "v40" "vpc5" "0"
+	node "v41" "vpc5" "1"
+	node "v42" "vpc5" "2"
+	node "v43" "vpc5" "3"
+	node "v44" "vpc5" "4"
+	node "v45" "vpc5" "5"
+	node "v46" "vpc5" "6"
+	node "v47" "vpc5" "7"
+	node "v48" "vpc6" "0"
+	node "v49" "vpc6" "1"
+	node "v50" "vpc6" "2"
+	node "v51" "vpc6" "3"
+	node "v52" "vpc6" "4"
+	node "v53" "vpc6" "5"
+	node "v54" "vpc6" "6"
+	node "v55" "vpc6" "7"
+	node "v56" "vpc7" "0"
+	node "v57" "vpc7" "1"
+	node "v58" "vpc7" "2"
+	node "v59" "vpc7" "3"
+	node "v60" "vpc7" "4"
+	node "v61" "vpc7" "5"
+	node "v62" "vpc7" "6"
+	node "v63" "vpc7" "7"
+end nodes
