@@ -1,22 +1,0 @@
-####################################################################
-# $Id$
-# by Andrew C. Uselton <uselton2@llnl.gov> 
-# Copyright (C) 2001 Regents of the University of California
-# See ./DISCLAIMER
-####################################################################
-# Config file for the new PowerMan daemon
-include "/etc/powerman/wti.spec"
-begin global
-	client listener port 10101
-end global
-device "WTI" "wti" "wti2" "23"
-begin nodes
-	node "tux0" "WTI" "1"
-	node "tux1" "WTI" "2"
-	node "tux2" "WTI" "3"
-	node "tux3" "WTI" "4"
-	node "tux4" "WTI" "5"
-	node "tux5" "WTI" "6"
-	node "tux6" "WTI" "7"
-	node "tux7" "WTI" "8"
-end nodes
