@@ -1,25 +1,0 @@
-####################################################################
-# $Id$
-# by Andrew C. Uselton <uselton2@llnl.gov> 
-# Copyright (C) 2001 Regents of the University of California
-# See ./DISCLAIMER
-####################################################################
-# Config file suitable for testing with the "vicebox" virtual
-# power control device.  
-include "/etc/powerman/vicebox.dev"
-begin global
-	client listener port 10101
-end global
-device "ViceBox" "vicebox" "localhost" "11000"
-begin nodes
-	node "tux0" "ViceBox" "1"
-	node "tux1" "ViceBox" "2"
-	node "tux2" "ViceBox" "3"
-	node "tux3" "ViceBox" "4"
-	node "tux4" "ViceBox" "5"
-	node "tux5" "ViceBox" "6"
-	node "tux6" "ViceBox" "7"
-	node "tux7" "ViceBox" "8"
-	node "tux8" "ViceBox" "9"
-	node "tux9" "ViceBox" "10"
-end nodes
